fix: somewhat fixed the spacing in onboarding menu

--- a/src/sass/variantcss/_companySetup.scss
+++ b/src/sass/variantcss/_companySetup.scss
@@ -47,12 +47,24 @@
 
 .company-setup-menu-navigation-div{
   position: relative;
+  line-height: 14px;
+  display: inline-block;
 }
 
 .company-setup-menu-navigation-title{
-  position: absolute;
-  top:4px;
-  left:36px;
+  margin: 0;
+  display: inline-block;
+  position: relative;
+  top: -7px;
+  left: 6px;
+}
+
+.company-setup-menu-navigation-long-title{
+  margin: 0;
+  display: inline;
+  position: relative;
+  top: -7px;
+  left: 6px;
 }
 
 .menu-number {
@@ -106,6 +118,7 @@
 
 .menu-mark {
   position: relative;
+  display: inline-block;
   background-color: white;
   border: 1px solid #00E5B8;
   width: 24px;
